# unichess-desktop

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2_image.cmake
src/: bishop.cpp  bishop.h  board.cpp  board.h  board_omniscient.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rock.cpp  rock.h
